[gd_scene load_steps=3 format=3 uid="uid://bmfl2xa7n2g2n"]

[ext_resource type="Script" uid="uid://bsaiyxqli3rj3" path="res://source/utils/property_tree/nodes/item_country_node.gd" id="1_reqb4"]
[ext_resource type="PackedScene" uid="uid://b7jj51hv4hwqq" path="res://source/ui/country_and_relationship.tscn" id="2_1s1uy"]

[node name="ItemCountry" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_reqb4")

[node name="Container" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="Label" type="Label" parent="Container/ItemContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Country"

[node name="CountryInfo" parent="Container/ItemContainer" instance=ExtResource("2_1s1uy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 32)
layout_mode = 2
size_flags_vertical = 4
is_button_enabled = false
button_minimum_size = Vector2(0, 32)

[node name="Button" type="Button" parent="Container/ItemContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Choose..."

[connection signal="pressed" from="Container/ItemContainer/Button" to="." method="_on_change_button_pressed"]
